tutorial-vm: Install `nano`
So we provide `emacs`, `nano`, and `vim` as editors.

--- a/docs/programmers/tutorials/workflows/roles/tutorial-vm/tasks/main.yml
+++ b/docs/programmers/tutorials/workflows/roles/tutorial-vm/tasks/main.yml
@@ -35,8 +35,9 @@
     state: installed
   with_items:
     # editors
-    - vim-nox
     - emacs-nox
+    - nano
+    - vim-nox
     # ImageMagick commands are used in the "Warholize" workflow
     - imagemagick
     # BLAST is needed in some exercises
