Ensure `ghostscript` is installed on the "tutorial VM".
Without it, many ImageMagick commands fail with an obscure error about
fonts not being available (even if the image command does not involve
any text manipulation).

--- a/docs/programmers/tutorials/workflows/roles/tutorial-vm/tasks/main.yml
+++ b/docs/programmers/tutorials/workflows/roles/tutorial-vm/tasks/main.yml
@@ -40,6 +40,8 @@
     - vim-nox
     # ImageMagick commands are used in the "Warholize" workflow
     - imagemagick
+    # `ghostscript` is needed by ImageMagick's `montage` command
+    - ghostscript
     # BLAST is needed in some exercises
     - blast2
     - ncbi-blast+
