Travis CI: pin `pytest` version to 3.2.5
This is the last version that is still compatible with Python 2.6.

We should really drop Python 2.6 ASAP...

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ addons:
     - time
 install:
   - "pip install --upgrade setuptools pip"
-  - "pip install 'pytest>=3.0.6' mock"
+  - "pip install 'pytest==3.2.5' mock"
   - "pip install -e .[openstack,ec2,daemon]"
 script: pytest -v
